2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.10.4

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Russian, Simplified Chinese and French translation. Thanks
	to all translators.
	* po/fr.po
	* po/ru.po
	* po/zh_CN.po

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added keys parameter to tellStatus, tellActive, tellStopped and
	tellWaiting.
	* doc/xmlrpc/aria2rpc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added testcase for File::mkdirs().
	* test/FileTest.cc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten AbstractDiskWriter::openFile() without File::exists().
	* src/AbstractCommand.cc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added errno member variable to Exception.
	* src/DlAbortEx.cc
	* src/DlAbortEx.h
	* src/Exception.cc
	* src/Exception.h
	* src/RecoverableException.cc
	* src/RecoverableException.h

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Simplified directory creation.
	* src/DHTAutoSaveCommand.cc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Skip ";" after name value pair.
	* src/cookie_helper.cc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten util::mkdirs()
	* src/util.cc

2010-10-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten File::mkdirs()
	* src/File.cc

2010-10-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use RFC1123 date format in debug log of MDTM response and
	last-modified time and creation date of .torrent file printed
	using -S.
	* src/FtpNegotiationCommand.cc
	* src/RequestGroup.cc
	* src/bittorrent_helper.cc

2010-10-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.10.4
	* configure.ac